# FreeMHD

./: .gitignore  LICENSE  README.md
MHD_Solvers/bScalarPot_example_files/: thermophysicalProperties
MHD_Solvers/libs/BvtkUnstructuredToFoam/Make/: files  options
MHD_Solvers/libs/psiCoupleConstMur/: psiCoupleConstMur.C  psiCoupleConstMur.H
MHD_Solvers/libs/psiCoupleConstMur/Make/: files
MHD_Solvers/libs/smoothedInterfaceProperties/: .gitignore  interfaceProperties.C  interfaceProperties.H
MHD_Solvers/libs/smoothedInterfaceProperties/Make/: options
MHD_Solvers/solvers/apotBCMultiRegionInterFoam/: apotBCMultiRegionInterFoam.C  createMhdFields.H
MHD_Solvers/solvers/apotBCMultiRegionInterFoam/Make/: files  options
MHD_Solvers/solvers/apotBCMultiRegionInterFoam/fluid/: ePotEqn.H  setRegionMhdFluidFields.H
MHD_Solvers/solvers/apotBCMultiRegionInterFoam/solid/: createMhdSolidFields.H
MHD_Solvers/solvers/apotBCMultiRegionInterFoam/vacuum/: createMhdVacuumFields.H  createVacuumMeshes.H  setRegionMhdVacuumFields.H  solveMhdVacuum.H  vacuumAExteriorEquation.H
MHD_Solvers/solvers/apotMultiRegionFoam/Make/: options
MHD_Solvers/solvers/apotMultiRegionFoam/fluid/: aPotEqn.H
MHD_Solvers/solvers/apotMultiRegionFoam/solid/: solveSolid.H
MHD_Solvers/solvers/apotMultiRegionInterFoam/: apotMultiRegionInterFoam.C
MHD_Solvers/solvers/apotMultiRegionInterFoam/Make/: files  options
MHD_Solvers/solvers/apotMultiRegionInterFoam/fluid/: aPotEqn.H  createMhdFluidFields.H  ePotEqn.H  mhdTEqn.H
MHD_Solvers/solvers/apotMultiRegionInterFoam/solid/: setRegionMhdSolidFields.H
MHD_Solvers/solvers/bScalarPotChtMultiRegionFoam/: bPotEqn.H  bScalarPotChtMultiRegionFoam.C
MHD_Solvers/solvers/bScalarPotChtMultiRegionFoam/Make/: options
MHD_Solvers/solvers/bScalarPotChtMultiRegionFoam/fluid/: createMhdFluidFields.H  solveFluid.H  storeOldFluidFields.H
MHD_Solvers/solvers/bScalarPotChtMultiRegionFoam/solid/: createMhdSolidFields.H  solveSolid.H
MHD_Solvers/solvers/epotMultiRegionFoam/: epotMultiRegionFoam.C
MHD_Solvers/solvers/epotMultiRegionInterIsoFoam/: epotMultiRegionInterIsoFoam.C
MHD_Solvers/solvers/epotMultiRegionThermoelectricInterFoam/: epotMultiRegionInterFoam.C
OpenFOAM-v2206/: log.linux64GccDPInt32Opt
OpenFOAM-v2206/META-INFO/: build-info  manifest.txt  modules-manifest.txt
OpenFOAM-v2206/modules/adios/: .gitignore  Allwmake  README.md
OpenFOAM-v2206/modules/avalanche/: Allwclean  Allwmake  README.md
OpenFOAM-v2206/modules/cfmesh/: Allwclean  Allwmake
OpenFOAM-v2206/modules/external-solver/: Allwmake  README.md
OpenFOAM-v2206/modules/visualization/: Allwmake  README.md
OpenFOAM-v2206/modules/visualization/src/catalyst/: Allwclean  Allwmake  CMakeLists-OpenFOAM.txt  CMakeLists-Project.txt  CMakeLists.txt  catalystCoprocess.C  catalystCoprocess.H  catalystDict  catalystFunctionObject.C  catalystFunctionObject.H  catalystInput.C  catalystInput.H  catalystTools.C  catalystTools.H  catalystToolsI.H
OpenFOAM-v2206/modules/visualization/src/catalyst/areaMesh/: catalystFaMesh.C  catalystFaMesh.H  foamVtkFaMeshAdaptor.C  foamVtkFaMeshAdaptor.H  foamVtkFaMeshAdaptorFieldTemplates.C  foamVtkFaMeshAdaptorFields.C  foamVtkFaMeshAdaptorGeom.C
OpenFOAM-v2206/modules/visualization/src/catalyst/cloud/: catalystCloud.C  catalystCloud.H  foamVtkCloudAdaptor.C  foamVtkCloudAdaptor.H  foamVtkCloudAdaptorTemplates.C
OpenFOAM-v2206/modules/visualization/src/catalyst/volMesh/: catalystFvMesh.C  catalystFvMesh.H  foamVtkFvMeshAdaptor.C  foamVtkFvMeshAdaptor.H  foamVtkFvMeshAdaptorFieldTemplates.C  foamVtkFvMeshAdaptorFields.C  foamVtkFvMeshAdaptorGeom.C
OpenFOAM-v2206/modules/visualization/src/paraview-plugins/blockMeshReader/: CMakeLists-OpenFOAM.txt  CMakeLists-Project.txt  CMakeLists-Project56.txt  CMakeLists-library.txt  CMakeLists.txt
OpenFOAM-v2206/modules/visualization/src/paraview-plugins/blockMeshReader/plugin/: CMakeLists.txt  ParaFoamBlockReader.xml  paraview.plugin  pqFoamBlockMeshControls.cxx  pqFoamBlockMeshControls.h
OpenFOAM-v2206/modules/visualization/src/paraview-plugins/blockMeshReader/plugin/reader/: CMakeLists.txt  vtk.module  vtkPVblockMeshReader.cxx  vtkPVblockMeshReader.h
OpenFOAM-v2206/modules/visualization/src/paraview-plugins/foamReader/plugin/: CMakeLists.txt  ParaFoamReader.xml  paraview.plugin  pqFoamReaderControls.h
OpenFOAM-v2206/modules/visualization/src/paraview-plugins/foamReader/plugin/reader/: CMakeLists.txt  vtk.module  vtkPVFoamReader.h
OpenFOAM-v2206/modules/visualization/src/runTimePostProcessing/: Allwclean  Allwmake  CMakeLists-OpenFOAM.txt  CMakeLists-Project.txt  CMakeLists-library.txt  CMakeLists.txt  contourFilter.C  contourFilter.H  cuttingPlaneFilter.H  fieldVisualisationBase.C  fieldVisualisationBase.H  functionObjectCloud.H  functionObjectLine.H  functionObjectSurface.H  geometryBase.H  geometryCloud.H  geometryCloudGather.C  geometryCloudTemplates.C  geometryPatches.C  geometryPatches.H  geometryPatchesGather.C  geometryPatchesTemplates.C  geometrySurface.C  geometrySurface.H  pathline.C  pathline.H  pointData.H  runTimePostProcessing.C  runTimePostProcessing.H  scalarBar.H  scene.C  scene.H  surface.C  surface.H  surfaceGather.C  surfaceTemplates.C  volumeFilter.H
OpenFOAM-v2206/modules/visualization/src/runTimePostProcessing/dummy/: runTimePostProcessingDummy.H
OpenFOAM-v2206/modules/visualization/src/runTimePostProcessing/dummy/Make/: files
OpenFOAM-v2206/modules/visualization/src/runTimePostProcessing/dummy/lnInclude/: runTimePostProcessingDummy.C  runTimePostProcessingDummy.H
OpenFOAM-v2206/src/Pstream/: Allwmake
OpenFOAM_MHD_solvers/apot_example_files/: codeDict
OpenFOAM_MHD_solvers/apot_example_files/0/: A
OpenFOAM_MHD_solvers/bScalarPot_example_files/: Psi
OpenFOAM_MHD_solvers/libs/BvtkUnstructuredToFoam/: BvtkUnstructuredToFoam.C  createMyMesh.H
OpenFOAM_MHD_solvers/libs/smoothedInterfaceProperties/: Allwmake
OpenFOAM_MHD_solvers/solvers/apotMultiRegionFoam/: createFields.H  readPIMPLEControls.H
OpenFOAM_MHD_solvers/solvers/epotMultiRegionInterIsoFoam/: createMhdFields.H
(+8223 files in other folders)
